--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,15 @@
-fastapi>=0.68.0
-yfinance>=0.1.63
-newsapi-python>=0.2.6
-uvicorn>=0.15.0 
-newscatcherapi-python-sdk
-fastapi
-uvicorn
-sqlalchemy
-yfinance
-requests
-scikit-learn
+fastapi==0.110.0
+uvicorn==0.28.0
+sqlalchemy==2.0.27
+pydantic==2.5.2
+mysql-connector-python==8.3.0
+requests==2.31.0
+yfinance==0.2.35
+scikit-learn==1.4.0
+numpy==1.26.3
+pandas==2.2.0
+tensorflow==2.15.0
+matplotlib==3.8.2
+pytest==8.0.0
+httpx==0.27.0
+python-dotenv==1.0.1
